unpackaged/main/default/objects/UXR_CSV_Staging__c/UXR_CSV_Staging__c.object-meta.xml
<CustomObject>
    <label>UXR CSV Staging</label>
    <nameField>
        <displayFormat>UXR-{000000}</displayFormat>
        <label>UX Research CSV Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UXR CSV Staging</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>