unpackaged/main/default/objects/UXR_CSV_Staging__c/fields/CSV_File_Name__c.field-meta.xml
<CustomField>
    <fullName>CSV_File_Name__c</fullName>
    <label>CSV File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>