unpackaged/main/default/objects/UXR_CSV_Staging__c/fields/CSV_Header__c.field-meta.xml
<CustomField>
    <fullName>CSV_Header__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSV Header</label>
    <type>Checkbox</type>
</CustomField>