unpackaged/main/default/objects/UXR_CSV_Staging__c/fields/CSV_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>CSV_Upload_Date__c</fullName>
    <label>CSV Upload Date</label>
    <type>Date</type>
</CustomField>