unpackaged/main/default/objects/UXR_CSV_Staging__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <externalId>true</externalId>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>