unpackaged/main/default/objects/UXR_CSV_Staging__c/fields/Research_Project_Master__c.field-meta.xml
<CustomField>
    <fullName>Research_Project_Master__c</fullName>
    <label>Research Project Master</label>
    <referenceTo>Research_Project_Master__c</referenceTo>
    <relationshipLabel>UXR CSV Staging</relationshipLabel>
    <relationshipName>UX_Research_CSV_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>