unpackaged/main/default/objects/UXR_CSV_Staging__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <externalId>true</externalId>
    <label>User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>