unpackaged/main/default/objects/UXR_CSV_Staging__c/fields/UXR_CSV_Column14__c.field-meta.xml
<CustomField>
    <fullName>UXR_CSV_Column14__c</fullName>
    <label>UXR CSV Column14</label>
    <length>255</length>
    <type>Text</type>
</CustomField>